--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/jest": "^26.0.24",
     "jest": "^27.2.1",
+    "pg-promise": "^10.11.0",
     "typescript": "^4.4.3"
   },
   "devDependencies": {},
