--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "@types/jest": "^26.0.24",
-    "jest": "^27.2.1",
-    "pg-promise": "^10.11.0",
-    "typescript": "^4.4.3"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "tsc && jest ./dist"
+    "test": "tsc && jest ./dist --forceExit",
+    "main": "tsc && node ./dist/src/main"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@hapi/hapi": "^20.1.5",
+    "@types/express": "^4.17.13",
+    "@types/hapi__hapi": "^20.0.9",
+    "@types/jest": "^26.0.24",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "jest": "^27.0.6",
+    "pg-promise": "^10.11.0",
+    "typescript": "^4.3.5"
+  }
 }
